--- a/components/src/app/card/card.component.html
+++ b/components/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
-  <div class="card__plan card__item">Plano <b>Simples</b></div>
-  <div class="card__price card__item">R$ 100,00</div>
+  <div class="card__plan card__item">Plano <b>{{plan.info.type}}</b></div>
+  <div class="card__price card__item">R$ {{plan.info.price}},00</div>
 
   <app-card-button></app-card-button>
 </div>
