--- a/components/src/app/card/card.component.html
+++ b/components/src/app/card/card.component.html
@@ -3,4 +3,5 @@
   <div class="card__price card__item">R$ {{plan.info.price}},00</div>
 
   <app-card-button></app-card-button>
+  <app-card-button-cancel></app-card-button-cancel>
 </div>
