added @input and @output in component card

--- a/components/src/app/app.component.html
+++ b/components/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="card-containes">
-  <app-card></app-card>
+  <app-card [planCard]="plan"></app-card>
   <app-card-purple></app-card-purple>
 </div>
