component dumb and pipe class

--- a/directives-pipes/src/app/app.component.html
+++ b/directives-pipes/src/app/app.component.html
@@ -16,28 +16,54 @@
 
 <button (click)="toggleDiv()">Show</button>
 
-
 <!-- ngFor -->
 <hr />
 <h4>ngFor</h4>
 <div class="list">
-  <div 
-    class="item" 
+  <div
+    class="item"
     *ngFor="
-      let person of listPeople; 
-      let i = index; 
-      let isOdd = odd; 
-      let isLast = last; 
-      let isFirst = first; 
-      let isEvent = even;"
+      let person of listPeople;
+      let i = index;
+      let isOdd = odd;
+      let isLast = last;
+      let isFirst = first;
+      let isEvent = even
+    "
     [class.item--odd]="isOdd"
     [class.item--highlighted]="personSelectedIndex === i"
     (click)="selectPerson(i)"
-  > 
+  >
     <p class="item__name">{{ i }} - {{ person.name }}</p>
     <p class="item__age">{{ person.age }} anos</p>
 
     <p *ngIf="isFirst">É o primeiro</p>
     <p *ngIf="isLast">É o último</p>
   </div>
+  <app-person
+    *ngFor="
+      let person of listPeople;
+      let i = index;
+      let isOdd = odd;
+      let isLast = last;
+      let isFirst = first;
+      let isEvent = even
+    "
+    [personName]="person.name"
+    [personAge]="person.age"
+    [personIndex]="i"
+    [isFirst]="isFirst"
+    [isLast]="isLast"
+    [isOdd]="isOdd"
+    [isSelected]="personSelectedIndex === i"
+    (personSelected)="selectPerson($event)"
+  >
+  </app-person>
 </div>
+
+<!-- Pipe -->
+<hr />
+<h4>Pipe</h4>
+<h1 [class]="person.status | statusClass">{{ person.name }}</h1>
+<h1 [class]="person2.status | statusClass">{{ person2.name }}</h1>
+<h1 [class]="person3.status | statusClass">{{ person3.name }}</h1>
