--- a/user-filter/src/app/app.component.html
+++ b/user-filter/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="left-container">
         <div class="top-div">
-            <app-filter></app-filter>
+            <app-filter (filter)="onFilter($event)"></app-filter>
         </div>
         <div class="main-left-div">
-            <app-users-list></app-users-list>
+            <app-users-list [usersList]="userListFiltered" (userSelected)="onUserSelected($event)"></app-users-list>
         </div>
     </div>
     <div class="right-div">
-        <app-user-details></app-user-details>
+        <app-user-details [user]="userSelected" *ngIf="showUserDetails"></app-user-details>
     </div>
 </div>
